# serde_hashmap_testing

./: Cargo.toml  exampledata.json
src/: main.rs
